To turn off the search field, set custom-search-field to nil .

*** Custom options now start out hidden if at their default values.
Use the arrow to the left of the option name to toggle visibility.

*** custom-buffer-sort-alphabetically now defaults to t.

*** The color widget now has a "Choose" button, which allows you to
choose a color via list-colors-display.

** VC and related modes

*** New VC commands: vc-log-incoming, vc-log-outgoing, vc-find-conflicted-file.

*** vc-dir for Bzr supports viewing shelve contents and shelving snapshots.

*** Special markup can be added to log-edit buffers.
The log-edit buffers are expected to have a format similar to email messages
with headers of the form:
  Author: <author of this change>
  Summary: <one line summary of this change>
  Fixes: <reference to the bug fixed by this change>
Some backends handle some of those headers specially, but any unknown header
is just left as is in the message, so it is not lost.

** Directory local variables can apply to file-less buffers.
For example, adding "(diff-mode . ((mode . whitespace)))" to your
.dir-locals.el file, will turn on `whitespace-mode' for *vc-diff* buffers.

** SQL Mode enhancements.

*** Several variables have been marked as safe local variables.
The variables `sql-product', `sql-user', `sql-server', and
`sql-database' can now be safely used as local variables.

*** Added ability to login with a port on MySQL.
The custom variable `sql-port' can be specified for connection to
MySQL servers.

*** Custom variables control prompting for login parameters.
Each supported product has a custom variable `sql-*-login-params'
which is a list of the parameters to be prompted for before a
connection is established.

*** Added option `sql-send-terminator'.
When set makes sure that each command sent with `sql-send-*' commands
are properly terminated and submitted to the SQL processor.

*** Added option `sql-oracle-scan-on'.